# rocket_diesel_rust

./: Cargo.toml  README.md  Rocket.toml  pg_hba.conf  postgresql.conf
migrations/2020-01-21-140307_rdr_users/: down.sql  up.sql
src/: main.rs  schema.rs
templates/: index.html.hbs  login.html.hbs  post.heml.hbs  register.html.hbs
