[package]
name = "rocket_diesel_rust"
version = "0.1.0"
authors = ["Gheorghe Florian GLAVAN <gglavan@bitdefender.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.9.0"
rocket = { version = "0.4.2", features = ["private-cookies"] }
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "postgres_pool", "json"]